Update Final10DaySeries.java